# Project_RAT_IRMV

./: README.md  goalpos.py  vicon1.py
IRMV_RAT_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
IRMV_RAT_ws/devel/include/inv_kinematics/: footend_pos.h  motor_pos.h  servo_pos.h
IRMV_RAT_ws/devel/include/penu/: LenCmd.h  PreCmd.h  Sensor.h
IRMV_RAT_ws/devel/include/vicon_bridge/: tf_distortConfig.h
IRMV_RAT_ws/devel/lib/inv_kinematics/: trot_gait_test.py  walk_gait_test.py
IRMV_RAT_ws/devel/lib/penu/: ctrl_demo_node  penu_ctrl_node  vicon_publisher.py  vicon_rece_demo_node  vicon_tf.py
IRMV_RAT_ws/devel/lib/pkgconfig/: inv_kinematics.pc  penu.pc  servo_control.pc  vicon_bridge.pc
IRMV_RAT_ws/devel/lib/python3/dist-packages/inv_kinematics/msg/: __init__.py  _footend_pos.py  _motor_pos.py  _servo_pos.py
IRMV_RAT_ws/devel/lib/python3/dist-packages/penu/msg/: _LenCmd.py  _PreCmd.py  _Sensor.py  __init__.py
IRMV_RAT_ws/devel/lib/python3/dist-packages/vicon_bridge/cfg/: tf_distortConfig.py
IRMV_RAT_ws/devel/lib/servo_control/: servoControl.py
IRMV_RAT_ws/devel/lib/vicon_bridge/: calibrate  testclient  tf_distort  vicon_bridge
IRMV_RAT_ws/devel/share/common-lisp/ros/inv_kinematics/msg/: _package.lisp  _package_footend_pos.lisp  footend_pos.lisp  (+5 more)
IRMV_RAT_ws/devel/share/inv_kinematics/cmake/: inv_kinematics-msg-extras.cmake  inv_kinematics-msg-paths.cmake  inv_kinematicsConfig.cmake
IRMV_RAT_ws/devel/share/penu/cmake/: penu-msg-extras.cmake  penu-msg-paths.cmake  penuConfig.cmake
IRMV_RAT_ws/devel/share/roseus/ros/inv_kinematics/: manifest.l
IRMV_RAT_ws/devel/share/roseus/ros/penu/: manifest.l
IRMV_RAT_ws/devel/share/roseus/ros/servo_control/: manifest.l
IRMV_RAT_ws/devel/share/roseus/ros/vicon_bridge/: manifest.l
IRMV_RAT_ws/devel/share/servo_control/cmake/: servo_control-msg-paths.cmake  servo_controlConfig.cmake
IRMV_RAT_ws/devel/share/vicon_bridge/cmake/: vicon_bridge-msg-extras.cmake  vicon_bridge-msg-paths.cmake  vicon_bridgeConfig.cmake
IRMV_RAT_ws/src/inv_kinematics/: CMakeLists.txt  package.xml
IRMV_RAT_ws/src/inv_kinematics/msg/: footend_pos.msg  motor_pos.msg  servo_pos.msg
IRMV_RAT_ws/src/inv_kinematics/scripts/: circle_test.py  invKinematics.py  trot_gait_test.py  walk_gait_test.py
IRMV_RAT_ws/src/penu/: CMakeLists.txt  README.md
IRMV_RAT_ws/src/penu/msg/: LenCmd.msg  PreCmd.msg  Sensor.msg
IRMV_RAT_ws/src/penu/scripts/: simple_ctrl_demo.sh  vicon_demo.sh  vicon_tf.py
IRMV_RAT_ws/src/penu/soft_device/: CMakeLists.txt
IRMV_RAT_ws/src/penu/soft_device/include/soft_device/: penu_usart.hpp  penu_vicon.hpp  serial_base.hpp
IRMV_RAT_ws/src/penu/soft_device/src/: penu_usart.cpp  penu_vicon.cpp
IRMV_RAT_ws/src/penu/soft_device/test/: test_device.cpp
IRMV_RAT_ws/src/penu/src/: ctrl_demo.cpp  penu_ctrl_node.cpp  vicon_rece_demo.cpp
IRMV_RAT_ws/src/servo_control/: CMakeLists.txt
IRMV_RAT_ws/src/servo_control/launch/: circle_test.launch  climb_stair_test.launch  trot_gait_test.launch
IRMV_RAT_ws/src/servo_control/scripts/: servoControl.py
(+22 files in other folders)
